apps/maintenance/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maintenance
  namespace: maintenance
  labels:
    app: maintenance
spec:
  selector:
    matchLabels:
      app: maintenance
  template:
    metadata:
      labels:
        app: maintenance
    spec:
      containers:
      - name: maintenance
        image: noambenm/maintenance:1.0.2
        ports:
        - containerPort: 8080
