apps/maintenance/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maintenance
  namespace: maintenance
spec:
  selector:
    app: maintenance
  ports:
  - port: 80
    targetPort: 8080
