apps/maintenance/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maintenance-ingress
  namespace: maintenance
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-cluster-issuer"
  labels:
    name: maintenance-ingress
spec:
  ingressClassName: cilium
  rules:
  - host: maintenance.mdch-lab.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: maintenance
            port: 
              number: 80
  tls:
    - hosts:
      - maintenance.mdch-lab.dev
      secretName: maintenance.mdch-lab.dev-cert
